--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,6 +1,9 @@
 <h1> Coupons: </h1>
 
+<%= link_to "Create New Coupon", new_merchant_coupon_path(@merchant), method: :get %>
 <% @coupons.each do |coupon| %>
   <p>Name: <%= link_to "#{coupon.name}", merchant_coupon_path(params[:merchant_id], coupon.id) %></p>
+  <p> Code: <%= coupon.code %></p>
+  <p>Discount Type: <%= coupon.discount_type %></p>
   <p>Amount off: <%= coupon.discount_amount %></p>
 <% end %>
