--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -4,4 +4,12 @@
 <p>Code: <%= @coupon.code %></p>
 <p>Off: <%= @coupon.discount_amount %></p>
 <p>Status: <%= @coupon.status %></p>
+
+<% if @coupon.status == "active"  %> 
+  <%= button_to "Deactivate #{@coupon.name}", merchant_coupon_path, method: :patch, params: {status: "inactive"} %>
+<% elsif @coupon.status == "inactive" %>
+  <%= button_to "Activate #{@coupon.name}", merchant_coupon_path ,method: :patch, params: {status: "active"} %>
+<% end %>
+
+
 <p>Used: <%= @coupon.used %></p>
