--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -3,13 +3,24 @@
 <p>Name: <%= @coupon.name %></p>
 <p>Code: <%= @coupon.code %></p>
 <p>Off: <%= @coupon.discount_amount %></p>
+<p>Discount Type: <%= @coupon.discount_type %></p>
 <p>Status: <%= @coupon.status %></p>
-
-<% if @coupon.status == "active"  %> 
-  <%= button_to "Deactivate #{@coupon.name}", merchant_coupon_path, method: :patch, params: {status: "inactive"} %>
-<% elsif @coupon.status == "inactive" %>
-  <%= button_to "Activate #{@coupon.name}", merchant_coupon_path ,method: :patch, params: {status: "active"} %>
-<% end %>
-
-
 <p>Used: <%= @coupon.used %></p>
+
+<section class="buttons">
+  <% if @coupon.status == "active" %>
+    <%= form_with url: merchant_coupon_path(@merchant, @coupon), method: :patch, data: {turbo: false} do |form| %>
+      <%= form.hidden_field :different_status, :value => :inactive %>
+      <%= form.submit "Deactivate Coupon" %>
+    <% end %>
+
+  <% elsif @coupon.status == "inactive" %>
+
+    <%= form_with url: merchant_coupon_path(@merchant, @coupon), method: :patch, data: {turbo: false} do |form| %>
+      <%= form.hidden_field :different_status, :value => :active %>
+      <%= form.submit "Activate Coupon" %>
+    <% end %>
+  <% end %>
+</section>
+
+
