--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -14,15 +14,17 @@
       <% end %>
   <p>Created on: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %>
 
-  <% if @invoice.coupon %>
-    <p><%= @invoice.coupon.name %></p>
-    <p><%= @invoice.coupon.code %></p>
-  <% else %>
-    No Coupon Applied
-  <% end %>
+  <section class="invoice_coupons">
+    <% if @invoice.coupon.present? %>
+      <p><%= @invoice.coupon.name %></p>
+      <p><%= @invoice.coupon.code %></p>
+      <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue) %>
+      <p>Grand Total: $<%= number_with_precision(@invoice.grand_total / 100, :precision => 2, :delimiter => ",") %>
+    <% else %>
+      No Coupon Applied
+    <% end %>
+  </section>
 
-  <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue) %>
-  <p>Grand Total: $<%= number_with_precision(@invoice.grand_total / 100, :precision => 2, :delimiter => ",") %>
 
   <h4>Customer:</h4>
     <%= @invoice.customer.first_name %> <%= @invoice.customer.last_name %><br>
